deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuage-up-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nuage-up-app
  template:
    metadata:
      labels:
        app: nuage-up-app
    spec:
      containers:
      - name: nuage-up-app
        image: mcpavaopereira/nuage_test:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
