service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuage-up-service
spec:
  selector:
    app: nuage-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
